--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,17 @@
     <string name="app_name">Anime Informer</string>
     <string name="action_settings">Settings</string>
     <string name="anime_name">Anime Name:</string>
+    <string name="season_number">Season Number:</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_main">MainActivity</string>
+
+    <string-array name="anime_type">
+        <item>Non-Season</item>
+        <item>Season</item>
+        <item>OVA</item>
+        <item>Specials</item>
+    </string-array>
+
 </resources>
